...
        }
    }

    var accessibilityIdentifier: String {
        switch self {
        case .system:
            return "settingsAppearanceOptionSystem"
        case .light:
            return "settingsAppearanceOptionLight"
        case .dark:
            return "settingsAppearanceOptionDark"
        }
    }
}

protocol AppAppearanceServing {
    var currentAppearance: AppAppearanceOption { get }
...
